Apps_deployment/Policy-Group/Policy-auth-fromAndTo/allow-auth-egress-to-postgresql.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-auth-egress-to-postgres
  namespace: app-services
spec:
  podSelector:
    matchLabels:
      app: auth-service
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: postgres
      namespaceSelector: 
        matchLabels:
          kubernetes.io/metadata.name: app-services
    ports: 
      - protocol: TCP
        port: 5432
  - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: kube-system
        podSelector:
          matchLabels:
            k8s-app: kube-dns
    ports:
      - protocol: UDP
        port: 53
      - protocol: TCP
        port: 53
